# llm-translator

./: .env_sample  .gitignore  Dockerfile  Makefile  README.md  TEST_README.md  docker-compose.yml  pyproject.toml  test_endpoints.py
llm_translator/: manage.py  urls.py
llm_translator/llm_translator/: asgi.py  settings.py  urls.py  wsgi.py
llm_translator/web/: admin.py  apps.py  artifact.py  auth.py  constants.py  excpetions.py  llm_providers.py  manager.py  models.py  schemas.py  serializers.py  signals.py  translator.py  urls.py  views.py
llm_translator/web/llm/: dspy_interfaces.py  llm_providers.py
llm_translator/web/management/commands/: init.py  register_all_models.py
llm_translator/web/migrations/: 0001_initial.py
llm_translator/web/samples/starwars/order_create/001/: expected.xml  input.json
llm_translator/web/samples/xml_to_json/001/: expected.json  input.xml
llm_translator/web/samples/yaml_to_json/001/: expected.json  input.yaml
llm_translator/web/translator/: artifact.py  executors.py  models.py  service.py
